# libidn

./: .gitignore  AUTHORS  HACKING  Makefile.am  NEWS  THANKS  cfg.mk  configure.ac
doc/: announce.txt  gendocs_template
examples/: example.c  example3.c  example4.c  example5.c
fuzz/: Makefile.am  README.md  get_ossfuzz_corpora  libidn_error_fuzzer.c  libidn_stringprep_fuzzer.c  libidn_toascii_fuzzer.c  libidn_tounicode_fuzzer.c  main.c  run-clang.sh
gl/: Makefile.am
gl/m4/: gnulib-cache.m4  gnulib-comp.m4
gl/override/lib/: gettext.h.diff
gltests/: Makefile.am
lib/: Makefile.am  idna.c  nfkc.c  profiles.c  punycode.c  strerror-idna.c  strerror-stringprep.c  stringprep.c  stringprep.h
lib/gl/: Makefile.am  iconv.c  iconv.in.h  iconv_close.c  iconv_open.c  limits.h  stdint.in.h  striconv.c  striconv.h  unistr.in.h
lib/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
lib/gl/unistr/: u8-check.c  u8-mbtoucr.c  u8-uctomb-aux.c  u8-uctomb.c
lib/gltests/: Makefile.am
po/: LINGUAS  cs.po.in  da.po.in  de.po.in  eo.po.in  fi.po.in  fr.po.in  hr.po.in  hu.po.in  id.po.in  it.po.in  ja.po.in  nl.po.in  pl.po.in  pt_BR.po.in  ro.po.in  sr.po.in  sv.po.in  uk.po.in  vi.po.in  zh_CN.po.in
src/: Makefile.am  idn.c
tests/: Makefile.am  tst_badutf8.c  tst_idna.c  tst_idna2.c  tst_idna3.c  tst_idna4.c  tst_nfkc.c  tst_pr29.c  tst_punycode.c  tst_strerror.c  tst_stringprep.c  tst_tld.c  tst_toascii64oob.c  tst_utf8crash.c  utils.c
windows/: .gitignore  idn.props  idn.sln  idn.vcxproj  perl.cmd
windows/include/: config.h  idn-int.h  unistr.h
(+4 files in other folders)
